spacing fix

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ h1 {
     display: flex;
     column-count: 2;
     margin: 0 0 40px 0;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 
